<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time_left"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/text_18"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"

            android:weightSum="5">

            <LinearLayout
                android:id="@+id/days_lyt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_bg"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/days"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:text="@string/days"
                    android:textColor="#000000"
                    android:textSize="8sp" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/hour_of_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/days_lyt"
                android:layout_weight="1"
                android:background="@drawable/rounded_bg"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/hours"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:text="@string/hours"


                    android:textColor="#000000"
                    android:textSize="8sp" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/min_of_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/hour_of_day"
                android:layout_weight="1"
                android:background="@drawable/rounded_bg"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/min"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:text="@string/min"
                    android:textColor="#000000"
                    android:textSize="8sp" />


            </LinearLayout>

            <LinearLayout

                android:id="@+id/sec_of_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/min_of_day"

                android:layout_weight="1"
                android:background="@drawable/rounded_bg"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/sec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0"

                    android:textColor="#000000"
                    android:textSize="@dimen/text_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sec"
                    android:layout_centerHorizontal="true"


                    android:layout_gravity="center"
                    android:text="@string/sec"


                    android:textColor="#000000"
                    android:textSize="8sp" />


            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/personal_button"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_selector"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/personal"
                android:textColor="@drawable/text_selected_color"
                android:textSize="@dimen/text_18" />

            <View
                android:layout_width="0.7dp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/team_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/button_background_selector"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/team"
                android:textColor="@drawable/text_selected_color"
                android:textSize="@dimen/text_18" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="gone"
            android:background="@color/white" />

    </LinearLayout>

    <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/recycler_view"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

    <!--</android.support.v7.widget.RecyclerView>-->

<FrameLayout
    android:layout_width="match_parent"
    android:id="@+id/frame"
    android:layout_height="match_parent" />
</LinearLayout>
